<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="new_track">New Course</string>
    <string name="return_main">Return Main</string>
    <string name="add_data">Add</string>
    <string name="title_activity_maps">Fitness Tracker</string>
    <string name="distance_m">Distance(m)</string>
    <string name="average_pace">Average Pace(m/s)</string>
    <string name="time">Time(hh:mm:ss)</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="pause">Pause</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="track_name">Track Name</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="course_id">Course Point ID</string>
    <string name="delete_course">Delete Course</string>
    <string name="start_datetime">Start Datetime</string>
    <string name="start_datetime_new">Start Datetime: </string>
    <string name="end_datetime">End Datetime</string>
    <string name="total_distance_m">Total Distance(m)</string>
    <string name="total_time_hh_mm_ss">Total Time(hh:mm:ss)</string>
    <string name="set_course_name">Set Course Name:</string>
    <string name="course_name_default">Course\u0020</string>
    <string name="calories_burnt">Calories Burnt</string>
    <string name="enter_weight">Enter Weight(kg):</string>
    <string name="all_courses">All Courses</string>
    <string name="enter_weight_kg">Enter weight</string>
    <string name="_70">70</string>
    <string name="weight_kg">Weight(kg)</string>
    <string name="rate_journey">Rate Journey:</string>
    <string name="link_image">Link Image</string>
    <string name="select_image">Select An Image</string>
    <string name="enter_course_name">Enter Course Name</string>
    <string name="image_selected">Image Selected:</string>
    <string name="weather_details">Weather Details:</string>
    <string name="time_change_mm_ss">Time Change(mm:ss)</string>
    <string name="pace_m_s">Pace(m/s)</string>
    <string name="distance_per_100m">Distance(per 100m)</string>
    <string name="point_id">Point ID</string>
    <string name="weight_kg_colon">Weight(kg):</string>
    <string name="_100m_splits">100m Splits</string>
    <string name="map_route">Map Route</string>
    <string name="rating_given">Rating Given:</string>
    <string name="image_given">Image Given:</string>
    <string name="no_image_given">--No Image--</string>
    <string name="remove_image">Remove Image</string>
    <string name="sort_courses_by">Sort Courses By:</string>
    <string name="overall_statistics">Overall Statistics</string>
    <string name="total_distance_traversed_m">Total Distance Traversed(m)</string>
    <string name="overall_average_pace_m_s">Overall Average Pace (m/s)</string>
    <string name="total_time_running_hh_mm_ss">Total Time Running (hh:mm:ss)</string>
    <string name="total_calories_burnt">Total Calories Burnt</string>
    <string name="statistics">Statistics</string>
    <string name="show_progress_for">Show Progress For:</string>
    <string name="stats_progression">Stats Progression</string>
    <string name="returnText">Return</string>
    <string name="average_pace_m_s">Average Pace (m/s)</string>
    <string name="course_ids_sorted_by_date">Course IDs (Sorted By Date)</string>
    <string name="timeGraph">Time (s)</string>
    <string name="distanceGraph">Distance (m)</string>
    <string name="caloriesGraph">Calories Burnt (kcal)</string>
    <string name="courses_by_date">Courses (By Date)</string>
    <string name="weather">Weather:</string>
</resources>