<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewmodel"
            type="com.example.cw3.viewmodels.NewCourseVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.NewCourse">

        <TextView
            android:id="@+id/weatherDetailsNew"
            android:layout_width="140dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="79dp"
            android:layout_marginBottom="3dp"
            android:text="@string/weather_details"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/weatherDetailsValue"
            app:layout_constraintEnd_toStartOf="@+id/ratingNew"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewStats" />

        <TextView
            android:id="@+id/weatherDetailsValue"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="41dp"
            android:text="@{viewmodel.weather}"
            android:textAlignment="textStart"
            app:layout_constraintBottom_toTopOf="@+id/startButton"
            app:layout_constraintEnd_toStartOf="@+id/ratingBarValue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weatherDetailsNew" />

        <TextView
            android:id="@+id/splitsTitleNew"
            android:layout_width="114dp"
            android:layout_height="24dp"
            android:text="@string/_100m_splits"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewStats"
            app:layout_constraintEnd_toStartOf="@+id/clearImageNew"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/map" />

        <TextView
            android:id="@+id/mapRouteNew"
            android:layout_width="103dp"
            android:layout_height="26dp"
            android:layout_marginStart="66dp"
            android:text="@string/map_route"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <Button
            android:id="@+id/clearImageNew"
            android:layout_width="143dp"
            android:layout_height="52dp"
            android:text="@string/remove_image"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/recyclerViewStats"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/map"
            app:layout_constraintTop_toBottomOf="@+id/imageButton" />

        <TextView
            android:id="@+id/imageSelectedNew"
            android:layout_width="106dp"
            android:layout_height="20dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="26dp"
            android:text="@string/select_image"
            android:textAlignment="center"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <TextView
            android:id="@+id/ratingNew"
            android:layout_width="106dp"
            android:layout_height="20dp"
            android:layout_marginEnd="71dp"
            android:text="@string/rate_journey"
            android:textAlignment="center"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/ratingBarValue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/weatherDetailsNew"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewStats" />

        <TextView
            android:id="@+id/weightLabelNew"
            android:layout_width="166dp"
            android:layout_height="20dp"
            android:text="@string/weight_kg_colon"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/weightValueNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/courseName"
            app:layout_constraintTop_toBottomOf="@+id/dateTime" />

        <TextView
            android:id="@+id/weightValueNew"
            android:layout_width="166dp"
            android:layout_height="20dp"
            android:text="@{viewmodel.weight}"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/courseName"
            app:layout_constraintTop_toBottomOf="@+id/weightLabelNew" />

        <TextView
            android:id="@+id/courseTitleNameNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_course_name"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/courseName"
            app:layout_constraintEnd_toStartOf="@+id/dateTime"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/courseName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_course_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:text="@string/course_name_default"
            android:textAlignment="center"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toStartOf="@+id/weightLabelNew"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseTitleNameNew"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/startDatetimeNew"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="98dp"
            android:text="@string/start_datetime_new"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/courseTitleNameNew"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/dateTime"
            android:layout_width="166dp"
            android:layout_height="20dp"
            android:text="@{viewmodel.startDateTime}"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/weightLabelNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/courseName"
            app:layout_constraintTop_toBottomOf="@+id/startDatetimeNew" />

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="250dp"
            android:layout_height="175dp"
            app:layout_constraintBottom_toTopOf="@+id/splitsTitleNew"
            app:layout_constraintEnd_toStartOf="@+id/clearImageNew"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mapRouteNew"
            tools:context=".activities.NewCourse"
            tools:layout="@android:layout/simple_gallery_item" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="80dp"
            android:layout_marginEnd="57dp"
            android:layout_marginBottom="17dp"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/finishButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerViewStats" />

        <Button
            android:id="@+id/finishButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="17dp"
            android:text="@string/finish"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pauseButton"
            app:layout_constraintStart_toEndOf="@+id/startButton"
            app:layout_constraintTop_toBottomOf="@+id/ratingBarValue" />

        <Button
            android:id="@+id/pauseButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="17dp"
            android:text="@string/pause"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/finishButton"
            app:layout_constraintTop_toBottomOf="@+id/ratingBarValue" />

        <RatingBar
            android:id="@+id/ratingBarValue"
            android:layout_width="235dp"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="6dp"
            android:numStars="5"
            android:rating="1"
            android:stepSize="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingNew"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="143dp"
            android:layout_height="125dp"
            android:scaleType="fitXY"
            android:contentDescription="@string/link_image"
            app:layout_constraintBottom_toTopOf="@+id/clearImageNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/map"
            app:layout_constraintTop_toBottomOf="@+id/imageSelectedNew"
            app:srcCompat="@drawable/round_image_black_18" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewStats"
            android:layout_width="400dp"
            android:layout_height="109dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toTopOf="@+id/weatherDetailsNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/splitsTitleNew" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/mapRouteNew"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weightValueNew">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/distanceHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:text="@string/distance_m"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/paceHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/pace_m_s"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/timeHeader"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@string/time"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/caloriesHeader"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:text="@string/calories_burnt"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@{viewmodel.distance}"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/pace"
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@{viewmodel.pace}"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@{viewmodel.time}"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/caloriesValue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:text="@{viewmodel.calories}"
                    android:textAlignment="center" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>