<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.example.cw3.viewmodels.MainVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.MainActivity">

        <TextView
            android:id="@+id/enterWeight"
            android:layout_width="141dp"
            android:layout_height="28dp"
            android:text="@string/enter_weight"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/sortByMain"
            app:layout_constraintEnd_toStartOf="@+id/weightValue"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/sortByMain"
            android:layout_width="131dp"
            android:layout_height="31dp"
            android:text="@string/sort_courses_by"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toStartOf="@+id/sortStats"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/courseNames"
            app:layout_constraintTop_toBottomOf="@+id/weightValue" />

        <TextView
            android:id="@+id/courseNames"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all_courses"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toStartOf="@+id/sortByMain"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/enterWeight" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="400dp"
            android:layout_height="350dp"
            app:layout_constraintBottom_toTopOf="@+id/courseStatsButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sortStats" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newTrack"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/new_track"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:cornerRadius="50dp"
            app:icon="@drawable/outline_directions_run_black_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/courseStatsButton" />

        <EditText
            android:id="@+id/weightValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="Enter Weight(kg)"
            android:ems="10"
            android:hint="@string/enter_weight_kg"
            android:inputType="number"
            android:minHeight="48dp"
            android:text="@string/_70"
            android:textAlignment="center"
            android:textColorHint="#757575"
            android:textStyle="bold|italic"
            app:layout_constraintBottom_toTopOf="@+id/sortByMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/enterWeight"
            app:layout_constraintTop_toTopOf="parent" />

        <Spinner
            android:id="@+id/sortStats"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/recyclerView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sortByMain"
            app:layout_constraintTop_toBottomOf="@+id/weightValue"
            tools:ignore="SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/courseStatsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="147dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="144dp"
            android:text="@string/statistics"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>