<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewmodel"
            type="com.example.cw3.viewmodels.CourseStatisticsVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.CourseStatistics">


        <TextView
            android:id="@+id/graphAxisYheader"
            android:layout_width="81dp"
            android:layout_height="174dp"
            android:layout_marginTop="171dp"
            android:layout_marginBottom="137dp"
            android:rotation="0"
            android:text="@string/average_pace"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/idGraphView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <TextView
            android:id="@+id/graphAxisXheader"
            android:layout_width="216dp"
            android:layout_height="29dp"
            android:layout_marginStart="142dp"
            android:layout_marginEnd="53dp"
            android:layout_marginBottom="11dp"
            android:text="@string/courses_by_date"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/returnButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/idGraphView" />

        <TextView
            android:id="@+id/graphHeader"
            android:layout_width="208dp"
            android:layout_height="29dp"
            android:layout_marginStart="142dp"
            android:layout_marginEnd="61dp"
            android:text="@string/stats_progression"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/idGraphView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressList" />

        <Spinner
            android:id="@+id/progressList"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="9dp"
            android:layout_marginEnd="6dp"
            android:background="@android:drawable/btn_dropdown"
            android:spinnerMode="dropdown"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/graphHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sortProgress"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout"
            tools:ignore="SpeakableTextPresentCheck" />

        <TextView
            android:id="@+id/sortProgress"
            android:layout_width="157dp"
            android:layout_height="31dp"
            android:layout_marginStart="98dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="8dp"
            android:text="@string/show_progress_for"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/graphHeader"
            app:layout_constraintEnd_toStartOf="@+id/progressList"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

        <com.jjoe64.graphview.GraphView
            android:id="@+id/idGraphView"
            android:layout_width="325dp"
            android:layout_height="300dp"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toTopOf="@+id/graphAxisXheader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/graphAxisYheader"
            app:layout_constraintTop_toBottomOf="@+id/graphHeader" />

        <TextView
            android:id="@+id/overallStatsHeader"
            android:layout_width="271dp"
            android:layout_height="36dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="7dp"
            android:text="@string/overall_statistics"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/tableLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/returnButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="162dp"
            android:layout_marginEnd="156dp"
            android:layout_marginBottom="4dp"
            android:text="@string/returnText"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/graphAxisXheader" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="398dp"
            android:layout_height="73dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="5dp"
            app:layout_constraintBottom_toTopOf="@+id/progressList"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/overallStatsHeader">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/totalDistanceMain"
                    android:layout_width="88dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:lines="3"
                    android:text="@string/total_distance_traversed_m"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/totalPaceMain"
                    android:layout_width="94dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:text="@string/overall_average_pace_m_s"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/totalTimeMain"
                    android:layout_width="105dp"
                    android:layout_height="56dp"
                    android:background="@drawable/border"
                    android:text="@string/total_time_running_hh_mm_ss"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/totalCaloriesMain"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:text="@string/total_calories_burnt"
                    android:textAlignment="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/totalDistanceValue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:text="@{viewmodel.totalDistanceString}"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/averagePaceValueMain"
                    android:layout_width="115dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:text="@{viewmodel.averagePaceString}"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/totalTimeValueMain"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:text="@{viewmodel.totalTimeString}"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/totalCaloriesMainValue"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@drawable/border"
                    android:text="@{viewmodel.totalCaloriesString}"
                    android:textAlignment="center" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>